<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:hapticFeedbackEnabled="false"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/ETsearch"
        android:layout_width="295dp"
        android:layout_height="47dp"
        android:background="#D6D6D6"
        android:contentDescription="@string/EditTextSearch"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/EditTextSearch"
        app:layout_constraintBottom_toBottomOf="@+id/IVbackButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/IVbackButton"
        app:layout_constraintTop_toTopOf="@+id/IVbackButton"
        android:importantForAutofill="no" />

    <ImageView
        android:id="@+id/IVbackButton"
        android:layout_width="58dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/BackButton"
        app:layout_constraintEnd_toStartOf="@+id/ETsearch"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backbutton" />

    <RadioButton
        android:id="@+id/RBtitle"
        android:layout_width="122dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/TitleRadioButton"
        android:text="@string/TitleRadioButton"
        app:layout_constraintEnd_toStartOf="@+id/RBtags"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVbackButton" />

    <RadioButton
        android:id="@+id/RBtags"
        android:layout_width="118dp"
        android:layout_height="34dp"
        android:contentDescription="@string/TagsRadioButton"
        android:text="@string/TagsRadioButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/RBtitle"
        app:layout_constraintTop_toTopOf="@+id/RBtitle" />

    <ScrollView
        android:id="@+id/SVresults"
        android:layout_width="384dp"
        android:layout_height="577dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="#DDD8D8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RBtitle">

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>